# pipeline-adventureworks

./: README.md  makefile
airflow/: .gitignore  docker-compose.yml  start.sh
airflow/dags/: dag_ingestao_adventureworks_api.py
src/: README.md  jsonl_to_delta.ipynb  parquet_to_delta.ipynb
tap-api/: .dockerignore  .env_sample  Dockerfile  README.md  entrypoint.sh  meltano.yml  pyproject.toml  requirements.txt
tap-api/tap_adventureworks/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap-api/tap_adventureworks/schemas/: purchaseorderheader.json  salesorderdetail.json  salesorderheader.json
tap-mssql/: .env_sample  Dockerfile  README.md  entrypoint.sh  meltano.yml
tap-mssql/.meltano/: analytics.json  meltano.db-shm
tap-mssql/.meltano/run/: bin
tap-mssql/.meltano/run/tap-mssql-customer/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-product/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-productcategory/: tap.properties.cache_key  tap.properties.json
tap-mssql/.meltano/run/tap-mssql-productsubcategory/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salescountryregioncurrency/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salescreditcard/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salescurrency/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salescurrencyrate/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salesorderdetail/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salesorderheader/: tap.properties.json
tap-mssql/.meltano/run/tap-mssql-salespersoncreditcard/: tap.properties.json
(+11 files in other folders)
